[gd_scene load_steps=6 format=3 uid="uid://d4mmmxsx3eywe"]

[ext_resource type="Texture2D" uid="uid://ckbk017hc3bh5" path="res://assets/sprites/muzzle_flash.png" id="1_cdh3u"]
[ext_resource type="Script" path="res://components/muzzle_flashes/muzzle_flash.gd" id="1_mqob4"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_df0b0"]
angle_min = -360.0
angle_max = 360.0
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_efo3o"]
transparency = 4
blend_mode = 1
shading_mode = 0
albedo_texture = ExtResource("1_cdh3u")
disable_receive_shadows = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_thftg"]
material = SubResource("StandardMaterial3D_efo3o")
size = Vector2(0.5, 0.5)

[node name="MuzzleFlash" type="Node3D"]
script = ExtResource("1_mqob4")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
emitting = false
amount = 5
lifetime = 0.05
one_shot = true
process_material = SubResource("ParticleProcessMaterial_df0b0")
draw_pass_1 = SubResource("QuadMesh_thftg")

[node name="BulletTrailDistanceCast" type="RayCast3D" parent="."]
target_position = Vector3(0, -1, -200)

[node name="MuzzleLight" type="SpotLight3D" parent="."]
light_color = Color(1, 0.792157, 0.0196078, 1)
light_energy = 3.0
shadow_enabled = true
spot_range = 8.96037
spot_angle = 58.5439
